assets/style.css
/*
p color:                          rgba(0, 0, 0, 0.7)
post-meta color:                  rgba(0, 0, 0, 0.17) (simlar to 'lightgrey');
figcaption color:                 rgba(0, 0, 0, 0.35);

hr, greyscale background-color:   rgba(0, 0, 0, 0.1)
*/

:root {
  scroll-behavior: smooth;
  /* https://css-tricks.com/almanac/properties/s/scroll-behavior/ */
  /* Only supported in Firefox right now */
}

* {
  box-sizing: border-box;
}

body {
  font-family: 'Input Sans Lt', sans-serif;
  margin: 0;
}

/*  Actual italicised typeface */
figcaption,
label,
em {
   font-family: "Input Sans Lt It";
}

nav,
header,
.home,
.post-content > div > * {
  max-width: 40rem; /* 640px */
  margin-left: auto;
  margin-right: auto;
  padding-left: 1rem;
  padding-right: 1rem;
}

.post-content > div > .container-lg {
  max-width: 90rem; /* 1440px */
  max-width: 1200px;
  margin: 1.5rem auto; /* Break bounds of body margin */
  padding-left: 0;
  padding-right: 0;
}

.post-content > div > .container-md {
  max-width: 48rem; /* 768px */
  margin: 1.5rem auto;
  padding-left: 0;
  padding-right: 0;
}




/* Grids, mobile first */
.grid {
  /* All grid cells conform to the overall 6-column grid */
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-gap: 2rem;
}

.grid figure {
  background-color: lightgreen;
}
.grid img {
  object-fit: cover;
  object-position: top;
}

.grid label {
  /*padding-right: 1rem;*/
  /*is there a way to detect if the edge of screen is on left or right, dynamically?*/
}

/* grid-dos-retrato: A 2-photo portrait grid style */
.grid-dos-retrato figure {
  grid-column: span 3;
}
/* grid-dos-retrato caption */
.grid-dos-retrato label {
  grid-column: 2/6;
  text-align: center;
}

/* grid-tres-rapido: A 3-photo grid style for editorial */
.grid-tres-rapido figure:nth-child(1) {
  grid-column: 1/7;
  grid-row: 1;
}
.grid-tres-rapido figure:nth-child(2) {
  grid-column: 1/5;
  grid-row: 2;
}
.grid-tres-rapido figure:nth-child(3) {
  grid-column: 1/7;
  grid-row: 3;
}
/* grid-tres-rapido caption */
.grid-tres-rapido label {
  grid-column: 5/7;
  grid-row: 2;
}

/* grid-tres-lento: A 3-photo grid style for editorial */
.grid-tres-lento figure:nth-child(1) {
  grid-column: 3/7;
  grid-row: 1;
}
.grid-tres-lento figure:nth-child(2) {
  grid-column: 4/7;
  grid-row: 2;
}
.grid-tres-lento figure:nth-child(3) {
  grid-column: 1/4;
  grid-row: 2;
}
/* grid-tres-lento caption */
.grid-tres-lento label {
  grid-column: 1/3;
  grid-row: 1;
  text-align: right;
}

/* grid-tres-alto: A 3-photo grid style for editorial */
.grid-tres-alto figure {
  grid-column: span 3;
}
/* grid-tres-alto caption */
.grid-tres-alto label {
  grid-column: 4/7;
}

/* grid-tres-grande: A 3-photo grid style for editorial */
.grid-tres-grande figure:nth-child(1) {
  grid-column: 1/5;
  grid-row: span 2;
}

.grid-tres-grande figure:nth-child(2),
.grid-tres-grande figure:nth-child(3){
  grid-column: 5/7;
}
/* grid-tres-grande caption */
.grid-tres-grande label {
  grid-column: 2/5;
  text-align: right;
}

/* grid-seis: A 6-photo grid style for Instagram photos */
.grid-seis figure {
  grid-column: span 2;
}
/* grid-seis caption */
.grid-seis label {
  grid-column: 2/6;
  /*grid-row: 5;*/
  text-align: center;
}


/* Tweaks for larger screens */
@media only screen and (min-width: 640px)  {
  /* grid-tres-rapido: A 3-photo grid style for editorial */
  .grid-tres-rapido figure:nth-child(1) {
    grid-column: 1/5;
    grid-row: 1;
  }
  .grid-tres-rapido figure:nth-child(2) {
    grid-column: 5/7;
    grid-row: 1;
  }
  .grid-tres-rapido figure:nth-child(3) {
    grid-column: 1/5;
    grid-row: 2;
  }
  /* grid-seis caption */
  .grid-tres-rapido label {
    grid-column: 5/7;
    grid-row: 2;
  }

  /* grid-tres-alto: A 3-photo grid style for editorial */
  .grid-tres-alto figure {
    grid-column: span 2;
  }
  /* grid-tres-alto caption */
  .grid-tres-alto label {
    grid-column: 1/3;
  }

  /* grid-seis: A 6-photo grid style for Instagram photos */
  .grid-seis figure {
    grid-column: span 1;
  }
  /* grid-seis caption */
  .grid-seis label {
    grid-column: 5/7;
    grid-row: 2;
    text-align: left;
  }
}






/* Headers */
h1 {
  font-size: 2.5rem;
  letter-spacing: -0.1rem;
}

h2 {
  margin-top: 3rem;
  margin-bottom: 0.75rem;
  letter-spacing: -0.06rem;
  line-height: 1.84rem;
}

h3 {
  margin-top: 2rem;
  letter-spacing: -0.05rem;
  line-height: 1.5rem;
  margin-bottom: -0.5rem;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: normal; /* not bold */
}

p, ul, ol {
  color: rgba(0, 0, 0, 0.7);
  line-height: 1.666667rem;
  letter-spacing: -0.04rem;
}

/* Links except for nav <@> */
/* Extended arguments not supported yet in browsers apart from Safari */
/* See https://developer.mozilla.org/en-US/docs/Web/CSS/:not#Browser_compatibility */
/*a:not(nav a:first-of-type) {*/
h1 a,
h2 a,
p a,
li a,
figcaption a {
  text-decoration: none;
  color: inherit;
  background-color: rgba(0, 0, 0, 0.05);
  transition: background-color 0.3s ease;
}

/*a:not(nav a:first-of-type):hover {*/
h1 a:hover,
h2 a:hover,
p a:hover,
li a:hover,
figcaption a:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

a:visited {
  text-decoration: none;
  color: inherit;
}

/* Ragged paragraphs */
p + p {
  text-indent: 1.5rem;
}

/* Lists */
ul {
  margin-left: 40px;
  /* Fix */
}
/* line breaks */
hr {
  border-style: solid;
  border-width: 0.5px;
  border-color: rgba(0, 0, 0, 0.1);
  margin: 2rem 0;
}

figure {
  margin: 0;
}

figcaption {
  text-align: center;
  width: 80%;
  margin: 0.5rem auto 0;
}
figcaption,
label { /* labels are captions in non figure elements */
  font-style: italic;
  font-size: 0.75rem;
  line-height: 1.3333333rem;
  color: rgba(0, 0, 0, 0.35);
}

/* Headers */
header {
  margin-bottom: 3rem;
}

/* Nav */
nav {
  margin-top: 3rem;
}
/* Nav <@> */
nav svg {
  width: 5.25rem;
  margin-left: -0.5rem;
  margin-top: -0.5rem; /* Optical align with nav ul*/
}

/* Nav navigation on right */
nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  float: right;
}
nav ul li {
  display: inline-block;
  text-align: right;
  padding-left: 1rem;
}

/* Don't break the text, and keep it light */
span.post-meta, time {
  color: rgba(0, 0, 0, 0.17);
  white-space: nowrap;
}

/* Home */
.home h1,
.home section:not(section:last-of-type) {
  margin-bottom: 4rem;
}

.home h1 a {
  color: rgba(0, 0, 0, 0.55);
}

/* Need 100% or they go full-size */
img,
video {
  width: 100%;
}

/* iframes */
/*https://benmarshall.me/responsive-iframes/*/
.intrinsic-container {
  position: relative;
  height: 0;
  overflow: hidden;
}

/* 16x9 Aspect Ratio */
.intrinsic-container {
  padding-bottom: 56.25%;
}

.intrinsic-container iframe {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Top and bottom margins on all post media */
.intrinsic-container,
.twitter-tweet {
  margin: 1.5rem auto;
}

.twitter-tweet {
  padding-left: 1rem;
  padding-right: 1rem;
  /* Fix */
}

/* Animations */
h1,
.post-header {
  opacity: 0;
  animation-name: fadein;
  animation-duration: 1s;
  animation-timing-function: ease-out;
  animation-delay: 0.1s;
  animation-direction: normal;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}
.page-content section,
.post-content {
  opacity: 0;
  animation-name: fadein;
  animation-duration: 1s;
  animation-timing-function: ease-out;
  animation-delay: 0.3s;
  animation-direction: normal;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-play-state: running;
}

@keyframes fadein {
  from { opacity: 0; }
  to { opacity: 1; }
}

